compiler-core/src/go/tests/snapshots/gleam_core__go__tests__blocks__sequences.snap
---
source: compiler-core/src/go/tests/blocks.rs
expression: "\nfn go() {\n  \"one\"\n  \"two\"\n  \"three\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  "one"
  "two"
  "three"
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.String_t {
  _ = "one"
  _ = "two"
  return "three"
}
